<resources>
    <string name="app_name">Animal Matching</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_start_game">StartGameActivity</string>
    <string name="number_of_tries">Tries: 0</string>
    <string name="matches">Matches: 0/8</string>
    <string name="win">YOU WON!</string>
    <string name="title_activity_next_level">NextLevel</string>
    <string name="level">Level: 1</string>
    <string name="levelscompleted">Levels Completed: 0</string>
    <string name="gameover">GAME OVER!</string>
    <string name="score">Total Score: 0</string>
    <string name="roundscore">Round Score: 0</string>
    <string name="timebonus">Time Bonus: 0</string>
    <string name="triesbonus">Tries Bonus: 0</string>
    <string name="levelscore">Level Score: 0</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="title_activity_select_difficulty">SelectDifficulty</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="gamesplayed">Games Played: 0</string>
    <string name="highscore">High Score: 0</string>
</resources>
