<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg1"
    android:id="@+id/rel"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jamalian.sina.memorygame.GameOver"
    tools:showIn="@layout/activity_game_over"
    style="@android:style/TextAppearance.DeviceDefault.Medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/gameover"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:paddingBottom="20dp"
        android:scaleType="fitXY"
        android:textSize="38sp"
        android:textColor="#000000"
        android:text="@string/gameover"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/highscore"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:paddingBottom="20dp"
        android:scaleType="fitXY"
        android:textSize="32sp"
        android:textColor="#000000"
        android:text=""
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/levelscompleted"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/roundscore"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/roundscore"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/timebonus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/timebonus"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/triesbonus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/triesbonus"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/levelscore"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/levelscore"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:scaleType="fitXY"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="32sp"
        android:textColor="#000000"
        android:text="@string/score"
        android:adjustViewBounds="true" />

    <ImageButton
        android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:paddingTop="20dp"
        android:background="@android:color/transparent"
        android:onClick="newGame"
        android:src="@drawable/newgame" />

    <ImageButton
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:paddingTop="20dp"
        android:background="@android:color/transparent"
        android:onClick="mainMenu"
        android:src="@drawable/quit" />
    </LinearLayout>

</RelativeLayout>
