<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bgstats"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jamalian.sina.memorygame.Statistics"
    tools:showIn="@layout/activity_statistics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:paddingBottom="20dp"
        android:scaleType="fitXY"
        android:textSize="38sp"
        android:textColor="#000000"
        android:text="@string/title_activity_statistics"
        android:adjustViewBounds="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

    <TextView
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:scaleType="fitXY"
        android:textSize="32sp"
        android:textColor="#000000"
        android:text="@string/easy"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/easygp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/gamesplayed"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/easyhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/highscore"
        android:adjustViewBounds="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

    <TextView
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="32sp"
        android:textColor="#000000"
        android:text="@string/medium"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/mediumgp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/gamesplayed"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/mediumhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/highscore"
        android:adjustViewBounds="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

    <TextView
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="32sp"
        android:textColor="#000000"
        android:text="@string/hard"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/hardgp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/gamesplayed"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/hardhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/highscore"
        android:adjustViewBounds="true" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:paddingTop="30dp"
        android:background="@android:color/transparent"
        android:onClick="resetStats"
        android:src="@drawable/reset" />
    </LinearLayout>

</RelativeLayout>
